[Cocoa] Global preferences are not accessible in the WebContent process when CFPrefs direct mode is enabled https://bugs.webkit.org/show_bug.cgi?id=211075 Source/WebKit:

<rdar://problem/61866711>

Reviewed by Brent Fulgham.

Global preferences in the domain 'kCFPreferencesAnyApplication' are not readable in the WebContent process when CFPrefs direct mode
is enabled. Fix this by transferring a select set of global preferences to the WebContent process on startup.

API test: WebKit.GlobalPreferences

* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode const):
(WebKit::WebProcessCreationParameters::decode):
* Shared/WebProcessCreationParameters.h:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::setGlobalPreferences):
(WebKit::WebProcess::platformInitializeWebProcess):

Tools:

Reviewed by Brent Fulgham.

* TestWebKitAPI/Tests/WebKit/PreferenceChanges.mm:
(TEST):


Canonical link: https://commits.webkit.org/224034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260840 268f45cc-cd09-0410-ab3c-d52691b4dbfc